--- a/store-front/src/components/ItemInput.css
+++ b/store-front/src/components/ItemInput.css
@@ -1,39 +1,50 @@
 .input-card {
-    
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 200px;
-    height: 280px;
-    border-radius: 20px;
-    color: black;
-    
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 280px;
+  height: 280px;
+  border-radius: 20px;
+  color: black;
 }
 
 .inputs {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 label {
-    font-weight: bold;
+  font-weight: bold;
 }
 
 .title {
-    font-family: monospace;
-    text-align: center;
-    font-size: 15px;
+  font-family: monospace;
+  text-align: center;
+  font-size: 15px;
 }
 
 label {
-    font-family: monospace;
-    font-size: 15px;
-    padding: 5px;
+  font-family: monospace;
+  font-size: 15px;
+  padding: 5px;
 }
 
 input {
-    height: 25px;
-    font-size: 15px;
-    padding-left: 10px;
+  height: 25px;
+  font-size: 15px;
+  padding-left: 10px;
+  outline: 0;
+  border-width: 0 0 2px;
+  border-color: blue;
 }
 
+input:focus {
+  border-color: green;
+}
+
+button {
+    color: black;
+    font-family: monospace;
+    font-weight: bold;
+    margin-top: 20px;
+}
